updating index.html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="page">
+      <nav>
+        <a id="logo" href="#"
+          >R
+          <img src="/images/logo.svg" alt="Rocket.sect" />
+          cket.sect
+        </a>
+        <ul>
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Serviços</a></li>
+          <li><a href="#">Contato</a></li>
+        </ul>
+      </nav>
+
+      <main>
+        <section>
+          <h1>Seus dados estão <span>protegidos?</span></h1>
+
+          <p>
+            A informação é fundamental e de
+            <strong>extrema importância</strong> para qualquer empresa. <br />
+            Aqui vai um <strong>texto</strong> como se fosse uma empresa de
+            <span>segurança da informação</span> apresentando o seu produto e
+            com o texto todo estilizado.
+          </p>
+        </section>
+        <img
+          src="images/img1.png"
+          alt="Desenho de um notebook, com um cadeado em um circulo verde no canto superior direito desta imagem, e a esquerda deste notebook encontra-se uma mulher com camisa verde."
+        />
+      </main>
+      <footer>
+        para mais informações nos siga no instagram
+        <a href="https://www.instagram.com/rocketsect/" target="_blank"
+          >@rockesect</a
+        >
+      </footer>
+    </div>
+    <img src="/images/padlock.svg" alt="Cadeado no canto inferior esquerdo." />
+  </body>
 </html>
