--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500;700&family=Open+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <div class="page">
       <nav>
-        <a id="logo" href="#"
-          >R
+        <a id="logo" href="#">
           <img src="/images/logo.svg" alt="Rocket.sect" />
-          cket.sect
         </a>
         <ul>
           <li><a href="#">Inicio</a></li>
@@ -22,11 +28,12 @@
 
       <main>
         <section>
-          <h1>Seus dados estão <span>protegidos?</span></h1>
+          <h1>Seus dados estão <span>protegidos</span>?</h1>
 
           <p>
             A informação é fundamental e de
-            <strong>extrema importância</strong> para qualquer empresa. <br />
+            <strong>extrema importância</strong> para qualquer empresa.
+            <br /><br />
             Aqui vai um <strong>texto</strong> como se fosse uma empresa de
             <span>segurança da informação</span> apresentando o seu produto e
             com o texto todo estilizado.
@@ -38,12 +45,17 @@
         />
       </main>
       <footer>
+        <div id="line"></div>
         para mais informações nos siga no instagram
         <a href="https://www.instagram.com/rocketsect/" target="_blank"
           >@rockesect</a
         >
       </footer>
     </div>
-    <img src="/images/padlock.svg" alt="Cadeado no canto inferior esquerdo." />
+    <img
+      id="padlock"
+      src="/images/padlock.svg"
+      alt="Cadeado no canto inferior esquerdo."
+    />
   </body>
 </html>
